# bbtautau-hists

./: .gitignore  .travis.yml  CMakeLists.txt  CommonInclude.h  CompTool.cpp  CompTool.h  Config.cpp  Config.h  Doxyfile  DrawStackTool.cpp  DrawStackTool.h  Example.h  Example_KLReweight.h  Example_NonRes.h  Example_ZtautauMG.h  Example_klambda.h  Example_yield.h  Example_zifeng.h  HistTool.cpp  HistTool.h  LICENSE  Processes.cpp  Processes.h  README.md  Regions.cpp  Regions.h  Systematics.h  Tests.h  Utils.cpp  Utils.h  Variables.cpp  Variables.h  generate_ctags.sh  main.cpp  setup.sh  setupEnvironment.sh  tags
cmake/Modules/: FindROOT.cmake
examples/: Example.cpp  Example.h  Example_NonRes.cpp  Example_NonRes.h  Example_Pulls.cpp  Example_Pulls.h  Example_Ranking.cpp  Example_Ranking.h  Example_WS.cpp  Example_WtDS.cpp  Example_WtDS.h  Example_WtGen.cpp  Example_WtGen.h  Example_WtOTF.cpp  Example_WtOTF.h  Example_ZtautauMG.cpp  Example_ZtautauMG.h  Example_klambda.cpp  Example_klambda.h  Example_klsignals.h  Example_ttbarKine.cpp  Example_ttbarRew.cpp  Example_ttbarRew.h  Example_ttbarSyst.cpp  Example_ttbarSyst.h  Example_ws.h  Example_yield.cpp  Example_yield.h  Example_zifeng.h  ExamplesInclude.h  ExamplesInclude_WS.h  HadHadSR_v15.cpp  HadHadSR_v15.h  HadHadSR_v15_binning.cpp  HadHadSR_v15_binning.h  HadHadSR_v15_yield.cpp  HadHadSR_v15_yield.h
exec/: main.cpp  run_pulls.cpp  run_ranking.cpp  test.cpp
ext/: LinkDef.h  RooTwoSidedCBShape.cpp  RooTwoSidedCBShape.h  roofitUtils.cpp  roofitUtils.h
jobs/: submit_pulls.sh  submit_ranking.sh
src/: AutoBinningTool.cpp  AutoBinningTool.h  CommonInclude.h  CommonInclude_WS.h  CompTool.cpp  CompTool.h  Config.cpp  Config.h  DrawStackTool.cpp  DrawStackTool.h  HistNameTool.cpp  HistNameTool.h  HistTool.cpp  HistTool.h  LephadTTBarCompTool.cpp  LephadTTBarCompTool.h  Processes.cpp  Processes.h  Pulls.cpp  Pulls.h  PullsTool.cpp  PullsTool.h  Ranking.cpp  Ranking.h  RankingTool.cpp  RankingTool.h  Regions.cpp  StatisticTool.h  SystCompTool.cpp  SystCompTool.h  Systematics.cpp  Utils.cpp  Utils.h  Utils_WS.cpp  Utils_WS.h  Variables.cpp  Variables.h  WorkSpace.h  WorkspaceTool.cpp  WorkspaceTool.h
